# genric_qaoa

./: .gitignore  README.md  __init__.py  clause.py  comb_clause.py  combinatorics_clause.py  generic_qaoa.py  main.py  mathematical_clause.py  pyproject.toml  qaoa.py  qaoa_circuit.py  qaoa_circut.py  tex source  utils.py  vfq_clause.py
