[tool.poetry]
name = "generic_qaoa"
version = "0.1.0"
description = ""
authors = ["Snir Bachar <snir@quantum-machines.co>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.1"
scipy = "^1.9.0"
qiskit = "^0.37.1"
matplotlib = "^3.5.2"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

